<resources>
    <string name="app_name">Geo.Log</string>
    <string name="reflector_updateimage">Update</string>
    <string name="app_exit">Exit</string>
    <string name="item_ok">OK</string>
    <string name="item_cancel">Cancel</string>
    <string name="item_reflector_configuration">Configuration</string>
    <string name="reflector_configuration">Configuration</string>
    <string name="item_close">Close</string>
    <string name="tracker_showlocation">Position</string>
    <string name="item_tracker">Tracker</string>
    <string name="tracker_panel_caption">Tracker</string>
    <string name="tracker_poi">POI on the map</string>
    <string name="reflector_cogeomonitorobjects">Objects</string>
    <string name="reflector_objecttracks">Tracks</string>
    <string name="SSetPositionError">"Error of setting current position, "</string>
    <string name="STooShortSearchContext">Search context must contain at least 2 characters.</string>
    <string name="SObjectsAreNotFound">Objects are not found.</string>
    <string name="SConnectionIsClosedUnexpectedly">server connection is closed unexpectedly</string>
    <string name="SWrongData">wrong data</string>
    <string name="SErrorOfDataLoading">"Error of loading data, "</string>
    <string name="SLoading">Loading &#8230;</string>
    <string name="SErrorOfListUpdating">"Error of updating list, "</string>
    <string name="SMapSources">Map sources</string>
    <string name="SCancel">Cancel</string>
    <string name="SMapShot">" MapShot "</string>
    <string name="STiles">" TILES "</string>
    <string name="SErrorOfConfigurationLoading">"error of loading configuration file: "</string>
    <string name="SImageUpdating">" Updating image &#8230; "</string>
    <string name="SErrorOfGettingUpperLayers">"Error of getting upper layers, "</string>
    <string name="SServerError">"Server returns an error, "</string>
    <string name="SConnectionError">connection error</string>
    <string name="SErrorOfUpdatingImage">"updating image, "</string>
    <string name="SErrorOfUpdatingCurrentPosition">"Error of updating current position, "</string>
    <string name="SAlarm">"!!! ALARM: "</string>
    <string name="SError">"Error: "</string>
    <string name="SErrorOfProgramInstalling">"Error of program installation, "</string>
    <string name="SErrorOfTrackerCreating">"Error of creating a tracker, "</string>
    <string name="SNoHTTPConnection">no HTTP connection</string>
    <string name="SConnectionTimeoutError">connection error, timeout is expired</string>
    <string name="SHTTPConnectionError">"error of HTTP connection, "</string>
    <string name="SFiles">Files</string>
    <string name="SErrorOfPreparingDataFile">"Error of preparing data file, "</string>
    <string name="SUnknownDataFileFormat">Unknown data file format</string>
    <string name="SErrorOfGettingObjectByCurrentPosition">"Error of getting object at current position, "</string>
    <string name="SErrorOfPositionGetting">error of getting position</string>
    <string name="SErrorOfGettingCurrentPositionTrackerIsNotAvailable">Error of getting current location: tracker is not available.</string>
    <string name="SCurrentPositionIsUnavailable">Current position is not available</string>
    <string name="SCurrentPositionIsUnknown">Current position is unknown</string>
    <string name="SNoCurrentPositionSetByLastCoords">Current position is unavailable at the moment, position is set by last known coordinates</string>
    <string name="SErrorOfGettingVisualizationData">error of getting visualization data</string>
    <string name="SErrorOfUpdatingCurrentPositionForObject">"error of updating current position, Object: "</string>
    <string name="SErrorOfLoadingObjectData">"Error of loading object data, "</string>
    <string name="SOnline">online</string>
    <string name="SOffline">offline</string>
    <string name="SAvailable">available</string>
    <string name="SNotAvailable">not available</string>
    <string name="SNone">none</string>
    <string name="SMinor">minor</string>
    <string name="SMajor">major</string>
    <string name="SCritical">critical</string>
    <string name="SErrorOfUpdatingObjectInfo">"Error of updating object info, "</string>
    <string name="SDevice">"DEVICE: "</string>
    <string name="SOn">On</string>
    <string name="SCoordinatesAreAvailable">location is available</string>
    <string name="SCoordinatesAreNotAvailable">location is NOT available</string>
    <string name="SDisabled">disabled</string>
    <string name="SCoordinatesGetting">getting location</string>
    <string name="SPermanentlyUnavailable">permanently unavailable</string>
    <string name="STemporarilyUnavailable">temporarily unavailable</string>
    <string name="SVRModeIsUnknown">None</string>
    <string name="SVRModeStreamH263">H263 A/V Stream Format</string>
    <string name="SVRModeStreamH264">H264 A/V Stream Format</string>
    <string name="SVRModeMPEG4">MPEG4 A/V Stream Format</string>
    <string name="SVRMode3GP">3GP A/V Stream Format</string>
    <string name="SActive">Active</string>
    <string name="SInactive">inactive</string>
    <string name="SNoMalfunction">- none -</string>
    <string name="SUnknownDevice">DEVICE: ?</string>
    <string name="SErrorOfGettingCurrentGMOPosition">"Error of getting current position, "</string>
    <string name="SErrorOfObjectTrackAdding">"Error of adding object track, "</string>
    <string name="SErrorOfSettingCurrentPosition">"Error of setting current position, "</string>
    <string name="SImageStorageIsCleared">Imagery is cleared</string>
    <string name="STrackerError">"Tracker error, "</string>
    <string name="SErrorOfSavingConfiguration">"Error of saving configuration, "</string>
    <string name="SElectedPlace">Place</string>
    <string name="SObjectTracks">Object tracks</string>
    <string name="SClose">Close</string>
    <string name="SLayers">Layers</string>
    <string name="SLayersForLabels">Layers for marks</string>
    <string name="SLays">Layers</string>
    <string name="SErrorOfGettingCoordinates">"Error of getting coordinates, "</string>
    <string name="SCoordinatesGettingForNow">Getting location&#8230;</string>
    <string name="STrackerIsNotInitialized">Tracker is not initialized</string>
    <string name="SSetError">"Set error: "</string>
    <string name="SSave">Save</string>
    <string name="SClear">Clear</string>
    <string name="SQueueOperations">Queue operations</string>
    <string name="SQueueIsSavedToDisk">Queue is saved on the disk.</string>
    <string name="SQueueIsCleared">Queue is cleared.</string>
    <string name="SPOI">POI</string>
    <string name="SNewPOI">New POI on the map</string>
    <string name="SAddText">Add text</string>
    <string name="SAddImage">Take a picture with camera</string>
    <string name="SAddVideo">Add video</string>
    <string name="STextIsAdded">"Text has been added, size: "</string>
    <string name="STextIsNull">empty text</string>
    <string name="SErrorOfSavingJPEG">error of saving jpeg image</string>
    <string name="SImageIsAdded">"Image has been added, size: "</string>
    <string name="SImageWasNotPrepared">Image was not prepared</string>
    <string name="SVideoFileIsNotExist">Video file is not exist</string>
    <string name="SDataIsAdded">"Data has been added, size: "</string>
    <string name="SKb">" Kb"</string>
    <string name="STrackerIsNotActive">Tracker is not active</string>
    <string name="SErrorOfSendingText">"Error of sending text, "</string>
    <string name="SEmptyText">Empty text</string>
    <string name="SErrorOfSendingImage">"Error of sending image, "</string>
    <string name="SImageIsNull">empty image</string>
    <string name="SErrorOfSendingData">"Error of sending data, "</string>
    <string name="SEmptyData">Empty data</string>
    <string name="SConnected">"Connected "</string>
    <string name="SNoConnection">"no connection "</string>
    <string name="SDisabledConnection">"disabled "</string>
    <string name="SMinsAgo">" min., "</string>
    <string name="SSecsAgo">" sec. ago"</string>
    <string name="SGeoPosition">"LOCATION: "</string>
    <string name="SSecs">" sec."</string>
    <string name="SGeoPositionIsUnknown">"LOCATION IS UNKNOWN: "</string>
    <string name="SLastCoordinates">\???, last: (</string>
    <string name="SGeoCoordinatesIsNull">LOCATION: ?</string>
    <string name="SGeoCoordinatesAreNotAvailable">not available</string>
    <string name="SServerSideError">"server side processing error, "</string>
    <string name="SGeoCoordinates">LOCATION</string>
    <string name="SDisabled1">disabled</string>
    <string name="SCreateNew">Create new</string>
    <string name="SCurrentPositionIsNotAvailableUsedLast">Current position is not available, POI will be set by last location</string>
    <string name="SPOIIsAdded">POI is added</string>
    <string name="SPOICreationError">"Error of creating new POI, "</string>
    <string name="SErrorOfInitializingVideorecorder">error of initializing Video-Recorder</string>
    <string name="SClickToScreenForVideorecording">Click the screen to start recording. Click again for stopping and adding.</string>
    <string name="SUnknownServerResponse">unknown server response</string>
    <string name="SSearchByName">Search by name</string>
    <string name="SCloseBtn">"   Close   "</string>
    <string name="SSearchingObjectsByName">Search objects by name</string>
    <string name="SSearchResult">Result:</string>
    <string name="SReflectionConfiguration">VIEWING CONFIGURATION</string>
    <string name="SViewMode">VIEW MODE</string>
    <string name="SConfiguration">CONFIGURATION</string>
    <string name="SServerAddress">Server address</string>
    <string name="SUserID">User ID</string>
    <string name="SUserPassword">User password</string>
    <string name="SGeoSpaceID">GeoSpace</string>
    <string name="SClearImagery">Clear local imagery</string>
    <string name="SShowLays">Show view layers</string>
    <string name="STrackerConfiguration">Tracker configuration</string>
    <string name="STrackerService">TRACKER SERVICE</string>
    <string name="SServerConnection">Server connection</string>
    <string name="STrackerPort">Tracker port</string>
    <string name="STrackerObjectID">Tracker object ID</string>
    <string name="STrackerTransmissionInterval">Tracker transmission interval, sec.</string>
    <string name="STrackerPositionReadingInterval">Tracker location reading interval, sec.</string>
    <string name="STrackerMapID">Tracker Map ID</string>
    <string name="SVideoRegistration">Video registration</string>
    <string name="SVideoRecorderProperties">Video-recorder properties</string>
    <string name="SSaveTrackerHistory">Save tracker history</string>
    <string name="SNewGMO">"  New object  "</string>
    <string name="SCloseBtn2">"     Close     "</string>
    <string name="SDrawing">Drawing</string>
    <string name="SUndo"> &lt;= </string>
    <string name="SRedo"> =&gt; </string>
    <string name="SCommit">Commit</string>
    <string name="SBrush">Brush</string>
    <string name="SClearImage">Clear</string>
    <string name="SSelect">Select</string>
    <string name="SBrushSize">Brush size</string>
    <string name="SBrushBlurRadius">Blur radius</string>
    <string name="SBrushBlurStyle">Blur style</string>
    <string name="SBrushColor">Brush color</string>
    <string name="SOk">OK</string>
    <string name="STransparent">Transparent</string>
    <string name="SSendPlaceToUser">Send to user &#8230;</string>
    <string name="SMyObjects">My Objects</string>
    <string name="SMark">" * "</string>
    <string name="SVideo">Video</string>
    <string name="SAudio">Audio</string>
    <string name="SCall">Call this user</string>
    <string name="SRemoveInactive">" Remove inactive "</string>
    <string name="SMap">Map</string>
    <string name="SReports">Reports</string>
    <string name="SSearch1">Search&#8230;</string>
</resources>