<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ReflectorConfigurationTableLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/TextView101"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff999999"
            android:gravity="center"
            android:text="@string/SConfiguration"
            android:textColor="#ff000000" >
        </TextView>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SServerAddress" >
        </TextView>

        <EditText
            android:id="@+id/edServerAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" >
        </EditText>

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SUserID" >
        </TextView>

        <EditText
            android:id="@+id/edUserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:text="" >
        </EditText>

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SUserPassword" >
        </TextView>

        <EditText
            android:id="@+id/edUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:password="true"
            android:text="" >
        </EditText>

        <TextView
            android:id="@+id/TextView1003"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SGeoSpaceID" >
        </TextView>

        <EditText
            android:id="@+id/edGeoSpaceID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:text="" >
        </EditText>

        <Button
            android:id="@+id/btnClearReflections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SClearImagery"
            android:textSize="16dp" >
        </Button>

        <Button
            android:id="@+id/btnSpaceLays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SShowLays"
            android:textSize="16dp" >
        </Button>

        <TextView
            android:id="@+id/TextView102"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff999999"
            android:gravity="center"
            android:text="@string/STrackerConfiguration"
            android:textColor="#ff000000" >
        </TextView>

        <CheckBox
            android:id="@+id/cbUseTrackerService"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/STrackerService" >
        </CheckBox>

        <CheckBox
            android:id="@+id/cbTrackerServerConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SServerConnection" >
        </CheckBox>

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STrackerPort" >
        </TextView>

        <EditText
            android:id="@+id/edTrackerServerPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:text="" >
        </EditText>

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STrackerObjectID" >
        </TextView>

        <EditText
            android:id="@+id/edTrackerServerObjectID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="integer"
            android:text="" >
        </EditText>

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STrackerTransmissionInterval" >
        </TextView>

        <EditText
            android:id="@+id/edTrackerOpQueueTransmitInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="integer|signed"
            android:text="" >
        </EditText>

        <TextView
            android:id="@+id/TextView08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STrackerPositionReadingInterval" >
        </TextView>

        <EditText
            android:id="@+id/edTrackerPositionReadInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="integer|signed"
            android:text="" >
        </EditText>

        <TextView
            android:id="@+id/TextView09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/STrackerMapID" >
        </TextView>

        <EditText
            android:id="@+id/edTrackerPOIMapID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="integer|signed"
            android:text="" >
        </EditText>

        <CheckBox
            android:id="@+id/cbTrackerVideoModuleEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SVideoRegistration" >
        </CheckBox>

        <Button
            android:id="@+id/btnTrackerVideoModulePropsPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SVideoRecorderProperties"
            android:textSize="16dp" >
        </Button>

        <CheckBox
            android:id="@+id/cbTrackerSaveOpQueue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SSaveTrackerHistory" >
        </CheckBox>
    </TableLayout>

</ScrollView>