<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lbUserListTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff999999"
        android:gravity="center"
        android:text="@string/SMyObjects"
        android:textColor="#ff000000" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff999999"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnClose"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/SCloseBtn2"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnNewObject"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/SNewGMO"
            android:textSize="16sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnSearch"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/SSearch1"
            android:textSize="16sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnRemoveInactiveObjects"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/SRemoveInactive"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSendSelectedObjectsToUser"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/SSendPlaceToUser"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnReports"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/SReports"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvObjects"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:choiceMode="multipleChoice"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/lbListHint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E7C04A"
        android:gravity="left"
        android:textColor="#ff000000"
        android:textSize="12sp"
        android:visibility="visible" />

</LinearLayout>