<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/DrawingEditorSurfaceLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="visible" >

        <SurfaceView
            android:id="@+id/DrawingEditorSurfaceView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:id="@+id/DrawingEditorSurfaceControlLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#ff999999" >

            <CheckBox
                android:id="@+id/cbDrawingEditorMode"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/SDrawing"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cbDrawingEditorSpaceBackground"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/SMap"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnDrawingEditorBrushSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SBrush"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnDrawingEditorUndo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SUndo"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnDrawingEditorRedo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SRedo"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnDrawingEditorClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SClearImage"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnDrawingEditorOperations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SMark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnDrawingEditorCommit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SCommit"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/DrawingEditorSettingsLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/black"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/llBrushSettingsButtons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="#ff999999" >

            <Button
                android:id="@+id/btnRWESettingsOk"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/SOk" />

            <Button
                android:id="@+id/btnRWESettingsCancel"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/SCancel" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBrushSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llBrushSettingsButtons"
            android:layout_alignParentLeft="true"
            android:background="#ff999999"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:gravity="fill_vertical"
                    android:text="@string/SBrushColor"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:id="@+id/RelativeLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" >

                    <Button
                        android:id="@+id/btnRWEBrushColor"
                        android:layout_width="149dp"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/btnRWEBrushTransparentColor"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@+id/btnRWEBrushTransparentColor"
                        android:text="@string/SSelect"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btnRWEBrushTransparentColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/STransparent"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="@string/SBrushSize"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <SeekBar
                    android:id="@+id/sbRWEBrushSize"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true" >

                <TextView
                    android:id="@+id/TextView3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="@string/SBrushBlurRadius"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <SeekBar
                    android:id="@+id/sbRWEBrushBlurRadius"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/TextView4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="19dp"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="@string/SBrushBlurStyle"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spRWEBrushBlurStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <view
            android:id="@+id/ivRWESettingsTest"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/llBrushSettings"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            class="com.geoscope.GeoEye.Space.TypesSystem.DATAFile.Types.Image.Drawing.TDrawingEditor$TSettingsTestImage" />

    </RelativeLayout>

</FrameLayout>